<resources>
    <string name="app_name">Archipelago</string>

    <!-- Used on the home screen -->
    <string name="cash">Cash</string>
    <string name="savings_account">Savings account</string>
    <string name="investment">Investment</string>
    <string name="add_sources_to_add_transactions">Add sources before adding transactions</string>
    <string name="month_change">Month change</string>

    <!-- Navigation labels -->
    <string name="home">Home</string>
    <string name="banking">Banking</string>
    <string name="stocks">Stocks</string>
    <string name="crypto">Crypto</string>
    <string name="settings">Settings</string>

    <!-- fragment_home.xml -->
    <string name="diversity">Diversity</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="add_source">New source</string>
    <string name="add_transaction">New transaction</string>
    <string name="buy_sell_stocks">Buy/sell stocks</string>
    <string name="buy_sell_crypto">Buy/sell cryptocurrencies</string>


    <!-- Used in adding a new savings source -->
    <string name="something_went_wrong_joke">Uhhh… Someone messed up, if you\'re seeing this</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="new_cash_source">cash source</string>
    <string name="new_savings_account">savings account</string>
    <string name="new_investment">investment</string>
    <string name="new_stock">New stock</string>
    <string name="add_new">Add new</string>
    <string name="source">Source</string>
    <string name="source_name">Source name</string>
    <string name="country">Country</string>
    <string name="amount">Amount</string>
    <string name="interest">Interest</string>
    <string name="capitalization">Capitalization</string>
    <string name="date_start">Date start</string>
    <string name="date_end">Date end</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="initial_account_state">Initial account state</string>
    <string name="added_automatically">Added automatically</string>
    <string name="error_blank">This cannot be blank</string>
    <string name="error_endDate_before_startDate">End date is before start date</string>

    <!-- Transactions -->
    <string name="top_up">Top up</string>
    <string name="take_out">Take out</string>
    <string name="transaction_name">Transaction name</string>
    <string name="select_source">Select source</string>
    <string name="other_details_optional">Other details (optional)</string>
    <string name="choose_option">Choose option</string>

    <!-- Capitalization types -->
    <string name="end_of_month">End of month</string>
    <string name="end_of_investment">End of investment</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>

    <!-- Descriptions describe objects on screen for text-to-speech -->
    <string name="description_add_savings_source_fab">A floating action button to add savings source or transaction</string>
    <string name="description_add_source_cash">A floating action button to add a cash source</string>
    <string name="description_add_source_savings_account">A floating action button to add a savings account source</string>
    <string name="description_add_source_investment">A floating action button to add an investment entry</string>
    <string name="description_add_source_stock">A floating action button to add a stock entry</string>
    <string name="description_add_source">A floating action button to add a new savings source</string>
    <string name="description_add_transaction">A floating action button to add a new transaction</string>
    <string name="description_image_representing_action">An image representing the chosen action</string>
    <string name="description_buy_or_sell_stocks">Buy or sell stocks</string>
</resources>