<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/homeScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.kwasow.archipelago.views.GraphViewCircular
                android:id="@+id/circularGraph"
                android:layout_width="match_parent"
                android:layout_height="280dp"/>

            <TextView
                android:id="@+id/textCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingStart="28dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cashRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/cashEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing_to_show"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/savings_account"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingStart="28dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accountRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/accountEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing_to_show"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textInvestment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/investment"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingStart="28dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/investmentRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/investmentEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing_to_show"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>